# apk-hardening-lab

./: build.gradle.kts  settings.gradle.kts
.github/workflows/: stage1-decompile.yml
loader-module/: build.gradle.kts
loader-module/src/main/java/com/android/pictach/loader/: NativeLoader.kt
tools/: dex_assembler.py  encrypt_dex.py  extract_and_encrypt.py  final_assembly.py  smali_locator.py
tools/native/: CMakeLists.txt  decrypt_loader.cpp
